Adjust Align and name

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./assets/feriado.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feriômetro</title>
+    <title>Feriadômetro</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="countdown-container">
-      <h1>Feriômetro</h1>
+      <h1>Feriadômetro</h1>
       <div id="countdown">
         <div id="timer">
           <div>
