--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feriadômetro</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2585021467264379"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="countdown-container">
