Added Loading Screen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     ></script>
   </head>
   <body>
+    <div id="loading">
+      <div class="loading-content">
+        <img src="assets/loading.gif" alt="Loading GIF" />
+        <h1>Aguarde, estamos procurando os feriados</h1>
+      </div>
+    </div>
+
     <div class="countdown-container">
       <h1>Feriadômetro</h1>
       <div id="countdown">
